# translate

./: Cargo.toml  README.md  clean.sh  index.html  log.txt
.github/workflows/: azure-static-web-apps-red-tree-09385b503.yml  azure-static-web-apps-white-beach-01e550a03.yml  pages.yml  rust.yml
assets/: manifest.json  sw.js
benches/: ascii.rs
src/: app.rs  main.rs
src/app/: convert.rs
